--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -5,9 +5,10 @@ $light-grey:#58595B;
 $dark-grey:#414042;
 $dark-blue:#1c1d21;
 $blue:#00AAB2;
+$blue-medium:#00838A;
 $yellow:#eaa815;
 $orange:#f26414;
-$orange-dark:#C24E0A;
+$orange-dark:#C74F0A;
 $red:#c71c10;
 
 /*media queries*/
