--- a/css/_common.scss
+++ b/css/_common.scss
@@ -3,7 +3,7 @@ body {
     position:relative;
     margin: 0;
     min-height: 100%;
-//    background-color:$dark-blue;
+   background-color:$dark-blue;
 }
 
 .page-wrapper {
