--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -1,7 +1,7 @@
 h1 {
     color:$dark-grey;
     font-size:32px;
-    line-height:48px;
+    line-height:40px;
     font-weight:900;
     font-family: $nunito;
     margin-bottom:10px;
@@ -27,7 +27,7 @@ h1 {
 h2 {
     color:$dark-grey;
     font-size:30px;
-    line-height:45px;
+    line-height:28px;
     font-weight:900;
     letter-spacing:0.02em;
     margin-bottom:6px;
@@ -44,7 +44,7 @@ h2 {
 h3 {
     color:$dark-grey;
     font-size:26px;
-    line-height:36px;
+    line-height:34px !important;
     font-weight:900;
     line-height:29px;
     font-family: $nunito;
@@ -52,14 +52,14 @@ h3 {
 
     @media #{$md-up} {
         font-size:28px;
-        line-height: 38px;
+        line-height: 36px !important;
     }
 }
 
 h4 {
     color:$dark-grey;
     font-size:22px;
-    line-height:33px;
+    line-height:30px;
     font-weight:700;
     font-family: $nunito;
     margin-bottom:10px;
