--- a/css/styles.css
+++ b/css/styles.css
@@ -279,7 +279,7 @@ hr {
 h1 {
   color: #414042;
   font-size: 32px;
-  line-height: 48px;
+  line-height: 40px;
   font-weight: 900;
   font-family: "Nunito Sans", Arial, Helvetica sans-serif;
   margin-bottom: 10px;
@@ -307,7 +307,7 @@ h1.white {
 h2 {
   color: #414042;
   font-size: 30px;
-  line-height: 45px;
+  line-height: 28px;
   font-weight: 900;
   letter-spacing: 0.02em;
   margin-bottom: 6px;
@@ -326,7 +326,7 @@ h2 {
 h3 {
   color: #414042;
   font-size: 26px;
-  line-height: 36px;
+  line-height: 34px !important;
   font-weight: 900;
   line-height: 29px;
   font-family: "Nunito Sans", Arial, Helvetica sans-serif;
@@ -336,14 +336,14 @@ h3 {
 @media (min-width: 768px) {
   h3 {
     font-size: 28px;
-    line-height: 38px;
+    line-height: 36px !important;
   }
 }
 
 h4 {
   color: #414042;
   font-size: 22px;
-  line-height: 33px;
+  line-height: 30px;
   font-weight: 700;
   font-family: "Nunito Sans", Arial, Helvetica sans-serif;
   margin-bottom: 10px;
@@ -1063,8 +1063,14 @@ ul.portfolio-items-list li.portfolio-item {
   padding: 0px 15px 50px 15px;
 }
 
-ul.portfolio-items-list li.portfolio-item img {
-  margin-bottom: 10px;
+ul.portfolio-items-list li.portfolio-item a {
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  ul.portfolio-items-list li.portfolio-item a {
+    margin-bottom: 10px;
+  }
 }
 
 ul.portfolio-items-list li.portfolio-item p {
@@ -1165,33 +1171,6 @@ ul.portfolio-items-list li.portfolio-item .overlay {
     opacity: 0;
     -webkit-transition: opacity 0.3s ease;
     transition: opacity 0.3s ease;
-  }
-}
-
-ul.portfolio-items-list li.portfolio-item .overlay h3 {
-  letter-spacing: 0.05em;
-  color: #fff;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-ul.portfolio-items-list li.portfolio-item .overlay h3:after {
-  content: '';
-  display: block;
-  height: 3px;
-  width: 148px;
-  margin: 0 auto;
-  background-color: #fff;
-  -webskit-transition: width 0.25s ease-in-out, background-color 0.25s ease;
-  -webkit-transition: width 0.25s ease-in-out, background-color 0.25s ease;
-  transition: width 0.25s ease-in-out, background-color 0.25s ease;
-  margin-top: 8px;
-}
-
-@media (min-width: 992px) {
-  ul.portfolio-items-list li.portfolio-item .overlay h3:after {
-    width: 0;
-    background-color: transparent;
   }
 }
 
@@ -1371,8 +1350,14 @@ ul.portfolio-items-list li.portfolio-item {
   padding: 0px 15px 50px 15px;
 }
 
-ul.portfolio-items-list li.portfolio-item img {
-  margin-bottom: 10px;
+ul.portfolio-items-list li.portfolio-item a {
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  ul.portfolio-items-list li.portfolio-item a {
+    margin-bottom: 10px;
+  }
 }
 
 ul.portfolio-items-list li.portfolio-item p {
@@ -1473,33 +1458,6 @@ ul.portfolio-items-list li.portfolio-item .overlay {
     opacity: 0;
     -webkit-transition: opacity 0.3s ease;
     transition: opacity 0.3s ease;
-  }
-}
-
-ul.portfolio-items-list li.portfolio-item .overlay h3 {
-  letter-spacing: 0.05em;
-  color: #fff;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-ul.portfolio-items-list li.portfolio-item .overlay h3:after {
-  content: '';
-  display: block;
-  height: 3px;
-  width: 148px;
-  margin: 0 auto;
-  background-color: #fff;
-  -webskit-transition: width 0.25s ease-in-out, background-color 0.25s ease;
-  -webkit-transition: width 0.25s ease-in-out, background-color 0.25s ease;
-  transition: width 0.25s ease-in-out, background-color 0.25s ease;
-  margin-top: 8px;
-}
-
-@media (min-width: 992px) {
-  ul.portfolio-items-list li.portfolio-item .overlay h3:after {
-    width: 0;
-    background-color: transparent;
   }
 }
 
