--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,13 @@ hr {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 768px) {
+  .headshot {
+    margin-bottom: 0px;
+  }
 }
 
 h1 {
@@ -307,10 +314,9 @@ h1.white {
 h2 {
   color: #414042;
   font-size: 30px;
-  line-height: 28px;
+  line-height: 36px;
   font-weight: 900;
   letter-spacing: 0.02em;
-  margin-bottom: 6px;
   position: relative;
   font-family: "Nunito Sans", Arial, Helvetica sans-serif;
   margin-bottom: 10px;
@@ -326,9 +332,8 @@ h2 {
 h3 {
   color: #414042;
   font-size: 26px;
-  line-height: 34px !important;
+  line-height: 34px;
   font-weight: 900;
-  line-height: 29px;
   font-family: "Nunito Sans", Arial, Helvetica sans-serif;
   margin-bottom: 10px;
 }
@@ -336,7 +341,7 @@ h3 {
 @media (min-width: 768px) {
   h3 {
     font-size: 28px;
-    line-height: 36px !important;
+    line-height: 36px;
   }
 }
 
